--- a/app/src/main/res/xml/calendar_widget_info.xml
+++ b/app/src/main/res/xml/calendar_widget_info.xml
@@ -6,5 +6,5 @@
     android:minHeight="128dp"
     android:previewImage="@mipmap/ic_plato_calendar"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen"
-    android:updatePeriodMillis="1800000" />
+    android:updatePeriodMillis="3600000"
+    android:widgetCategory="home_screen" />
